Patch Fix for blocked navigation items on mobile due to compose button position. Added 100px to bottom padding overall. This will be fine tuned with the design evolution.

--- a/app/javascript/styles/gabsocial/components.scss
+++ b/app/javascript/styles/gabsocial/components.scss
@@ -1380,6 +1380,7 @@ a.account__display-name {
 .ui {
 	display: block;
 	width: 100%;
+	padding: 0 0 100px 0;
 
 	.page {
 	display: flex;
